@@ -8,6 +8,7 @@
 -revise color arg processing.
 -refactor sprite collide methods.
 -revise imageloader processing.
+-revise sprite groupcollide for dict obj key.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
